# CodingHobby

./: .deepsource.toml  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md
ASM/: readme.md  readme.md.md
ASM/DOS/: Readme.md
C/: README.md
C#/: README.md
C#/AwesomeApp/AwesomeApp/AwesomeApp/: AwesomeApp.csproj
C#/AwesomeApp/AwesomeApp/AwesomeApp.Android/: AwesomeApp.Android.csproj
C#/AwesomeApp/AwesomeApp/AwesomeApp.iOS/: AwesomeApp.iOS.csproj
C#/DotNetDependencies/: DotNetDependencies.csproj  README.md
C#/Email/: Email.csproj  README.md
C#/Password Checker/Password Checker/: Form1.cs  Password Checker.csproj
C#/TodoApi/: TodoApi.csproj
C#/WinDesktop/SayHelloUWP/SayHelloUWP/: SayHelloUWP.csproj
C++/: README.md
C++/16_Games_Windows/: README.md
C++/Calculator/: makefile
C++/SDL2/TwinklebearDevLessons/: CMakeLists.txt
C++/SDL2/TwinklebearDevLessons/Lesson0/src/: main.cpp
C++/SDL2/TwinklebearDevLessons/Lesson0PS/: CMakeLists.txt
C++/SDL2/TwinklebearDevLessons/Lesson0PS/src/: main.cpp
C++/SDL2/TwinklebearDevLessons/Lesson1/src/: main.cpp
C++/SDL2/TwinklebearDevLessons/Lesson1PS/: CMakeLists.txt
C++/SDL2/TwinklebearDevLessons/Lesson1PS/src/: main.cpp
C++/SDL2/TwinklebearDevLessons/Lesson2/src/: main.cpp
C++/SDL2/TwinklebearDevLessons/Lesson3/: CMakeLists.txt
C++/SDL2/TwinklebearDevLessons/Lesson3/src/: main.cpp
C++/SDL2/TwinklebearDevLessons/include/: cleanup.h  res_path.h
Java/: README.md
Kotlin/Calculator/: build.gradle.kts
Python/: Number Guessing.py  README.md  madlibs.py
